# veyrsson

./: .gitignore  .ingestignore  Cargo.toml  LICENSE  NOTES_FOR_FUTURE_SONNY.md  PHASE_3E_PLAN.md  README.md  SESSION_NOTES.md  TheRoadAhead.md  bench_index.sh  ingest_manifest.json
crates/chunker/: Cargo.toml
crates/chunker/src/: lib.rs
crates/condenser/: Cargo.toml
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/mnematode_client/: Cargo.toml
crates/planner/: Cargo.toml
crates/reasoner/: Cargo.toml
crates/retriever/: Cargo.toml
crates/retriever/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
mentat-bin/: Cargo.toml
mentat-bin/src/: main.rs
mentat-daemon/: Cargo.toml
mentat-daemon/src/: main.rs
