[workspace]
members = [
    "crates/embedder",
    "crates/chunker",
    "crates/store",
    "crates/retriever",
    "crates/condenser",
    "crates/reasoner",
    "crates/planner",
    "crates/mnematode_client",
    "crates/ingest",
    "mentat-bin",
    "mentat-daemon"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

