[package]
name = "mentat-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

mentat-store = { path = "../crates/store" }
mentat-retriever = { path = "../crates/retriever" }
mentat-embedder = { path = "../crates/embedder" }
mentat-ingest = { path = "../crates/ingest" }
